# trash

./: .gitignore  README.md
bookmarklets/: README.html  README.md
c/fib/: CMakeLists.txt  classes_elf.cpp  classes_order.cpp  empty_program.c
cpp/algos/maxqueue/: CMakeLists.txt  main.cpp
cpp/euler/: CMakeLists.txt  main.cpp
cpp/huffman-decode/: CMakeLists.txt  main.cpp
cpp/msm/: CMakeLists.txt  main.cpp
cpp/multi/derivative/: CMakeLists.txt  main.cpp
cpp/multi/fifo/: CMakeLists.txt  main.cpp
cpp/multi/openmp_sort/: .gitignore  CMakeLists.txt  openmp_sort.cpp
cpp/multi/pipes/: .gitignore  CMakeLists.txt  exes.cpp  shell.cpp
cpp/multi/queues/: CMakeLists.txt  posix_sender.cpp  posix_server.cpp  sysv_queue_sender.cpp  sysv_queue_server.cpp
cpp/multi/semaphores/: CMakeLists.txt  posix_sem.cpp  semaphores.cpp
cpp/multi/shmem/: CMakeLists.txt  posix_shm.cpp  sysv_shm.cpp
cpp/multi/simple_allocator/: CMakeLists.txt  main.cpp
cpp/multi/socketpair/: CMakeLists.txt  work.cpp
cpp/multi/sockets/: .gitignore  CMakeLists.txt  client.cpp  server  server.cpp
cpp/multi/string_pointer/: main.cpp  (+1 more)
cpp/multi/threads/: CMakeLists.txt  cond.cpp  mutex.cpp  threads.cpp
cpp/perm/: CMakeLists.txt  main.cpp
cpp/perm-2/: CMakeLists.txt  main.cpp
cpp/simple-examples/: CMakeLists.txt  array_shift.cpp  cohesion.cpp  constr_access.cpp  expr.cpp  fib-modulo.cpp  getline.cpp  intlog.cpp  newref.cpp  power.cpp  private_access.cpp  roots.cpp  space_eater.cpp  str.cpp  sum.cpp  syntax.cpp  two-parts.cpp  virt.cpp
cpp/sle/: CMakeLists.txt  main.cpp
haskell/: .gitignore
haskell/other-lists/: other-lists.cabal
haskell/simplest/: Fib3.hs  binomial.hs  classes.hs  factorial.hs  fib.hs  fib2.hs  len.hs  lists.hs  perms.hs  show.hs  some.hs
java/: .gitignore
java/hello/: Hello.java
java/sample-server/: build.gradle
java/ulam/: .gitignore  pom.xml
js/bloom-filter/: BloomFilter.js  bloom.js  index.html
md/: stepic-courses.md
php/brackets/: brackets.php
sql/pg/: simple-stored.sql
(+39 files in other folders)
