cmake_minimum_required(VERSION 2.8)
project(simple_examples)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++03 -Wall -fpermissive")

add_executable(roots roots.cpp)
add_executable(syntax syntax.cpp)
add_executable(sum sum.cpp)
add_executable(power power.cpp)
add_executable(space_eater space_eater.cpp)
add_executable(intlog intlog.cpp)
add_executable(newref newref.cpp)
add_executable(array_shift array_shift.cpp)
add_executable(getline getline.cpp)
add_executable(cohesion cohesion.cpp)
add_executable(private_access private_access.cpp)
add_executable(constr_access constr_access.cpp)
add_executable(virt virt.cpp)
add_executable(expr expr.cpp)
add_executable(str str.cpp)
